Fixing service text on mobile

--- a/src/style/services.css
+++ b/src/style/services.css
@@ -1,7 +1,5 @@
 .service-options {
  justify-items: center;
- /* min-width: 50%;
- max-width: 50%; */
  font-size: 2vw;
  margin: auto;
 }
@@ -28,8 +26,7 @@ h2 a{
  padding-left: 10%;
 }
 .services-offered{
- font-size: 70%;
- /* list-style-type: none; */
+ font-size: 1vw;
 }
 .schedule-service{
  all: unset;
@@ -37,7 +34,7 @@ h2 a{
  display: flex;
  justify-content: center;
  margin: auto;
- margin-top: 2rem;
+ margin-top: 3rem;
  margin-bottom: 2rem;
  background-color: orange;
  color: white;
@@ -53,4 +50,36 @@ h2 a{
 
 .schedule-service:hover{
  background-color: darkorange;
+}
+
+@media only screen and (max-width: 920px){
+ h2 {
+   font-size: 3vw;
+   white-space: nowrap;
+  }
+
+.services-offered {
+  font-size: 2.5vw;
+ }
+
+  .schedule-service {
+   all: unset;
+   white-space: nowrap;
+   display: flex;
+   justify-content: center;
+   margin: auto;
+   margin-top: 3rem;
+   margin-bottom: 2rem;
+   background-color: orange;
+   color: white;
+   font-size: 100%;
+   font-weight: 800;
+   min-width: 50%;
+   max-width: 2rem;
+   max-height: 5rem;
+   cursor: pointer;
+   padding: 5% 10%;
+   border-radius: .5rem;
+  }
+
 }
